Deploy redirector on RHEL based container
Enable build on RHEL if TARGET=rhel.

As part of an effort to migrate the services running in OSIO from CentOS
to RHEL, we are ready to push out the RHEL based image for this service
into staging.

The OpenShift template has also been patched so it allows parametrization for
the container IMAGE, enabling the possibility of having different IMAGE urls for
staging and for production.

By merging this PR this service will be deployed to staging. Once we verify that
the RHEL based image works correctly, we can push to prod.

--- a/dsaas-services/redirector.yaml
+++ b/dsaas-services/redirector.yaml
@@ -4,3 +4,10 @@ services:
   path: homeless-templates/redirector.yaml
   url: https://github.com/openshiftio/saas-openshiftio/
   hash_length: 6
+  environments:
+  - name: staging
+    parameters:
+      IAMGE: prod.registry.centos.org/osio-prod/mattermost/nginx-redirector
+  - name: production
+    parameters:
+      IAMGE: registry.centos.org/mattermost/nginx-redirector
